# tunnel-ssh

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yml  here.sh  pyproject.toml
cli/: main.py
examples/: tunnel-ssh-config.example.json
server/: main.py
shared/: __init__.py  config.py  models.py
src/tunnel_ssh/: __init__.py  _version.py
src/tunnel_ssh/cli/: __init__.py  app.py  completions.py  http_client.py
src/tunnel_ssh/cli/commands/: config.py  exec_cmd.py  files.py
src/tunnel_ssh/server/: __init__.py  __main__.py  app.py  auth.py  helpers.py  settings.py
src/tunnel_ssh/server/routes/: __init__.py  files.py  health.py  websocket.py
src/tunnel_ssh/shared/: __init__.py  config.py  http.py  models.py
src/tunnel_ssh/ui/: __init__.py  app.py  helpers.py
tests/: __init__.py  e2e_test.sh  example.txt  here.sh  test_config.py  test_server_helpers.py  test_shared.py
ui/: main.py
