[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tunnel-ssh"
version = "0.2.0"
description = "Remote execution and file management over HTTP/WebSocket when SSH port 22 is blocked"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "typer>=0.12",
    "websockets>=13",
    "flet>=0.25",
    "httpx>=0.27",
    "pydantic>=2.9",
    "python-multipart>=0.0.9",
    "aiofiles>=24",
]

[project.scripts]
tunnel-server = "server.main:_cli"
tunnel        = "cli.main:run"
tunnel-ui     = "ui.main:main"

[tool.setuptools.packages.find]
include = ["shared*", "server*", "cli*", "ui*"]

